# 4d-game

./: .gitignore  3dtest.ipynb  4d_config.toml  Cargo.toml  Clipping.py  Geometry.py  README.md  camera.py  clipping-test.ipynb  colors.py  convex-mc.ipynb  draw.py  game-ideas.txt  inputs.py  opengl_draw_2d.py  opengl_draw_3d.py  test_opengl_2d_fns.py  vec.py
python/: 3dtest.ipynb  Clipping.py  Geometry.py  camera.py  inputs.py  matrix44.py  old.py  opengl_draw_2d.py  opengl_draw_3d.py  test_opengl_3d_fns.py  util.py  vec.py  vector3.py
resources/levels/: level_0.3d.ron  level_0.4d.ron  level_2.3d.ron  level_2.4d.ron  level_2_all_coins.4d.ron  level_2_all_coins_upgraded.4d.ron  level_2_upgraded.3d.ron  level_2_upgraded.4d.ron
rust/src/: build_level.rs  buildshapes.rs  clipping.rs  colors.rs  draw.rs  geometry.rs  graphics.rs  input.rs  main.rs  mat2.rs  mat3.rs  text_wrapper.rs  vec2.rs  vec3.rs  vector.rs
src/: build_level.rs  camera.rs  cleanup.rs  clipping.rs  coin.rs  collide.rs  colors.rs  components.rs  config.rs  constants.rs  debug.rs  draw.rs  ecs_utils.rs  engine.rs  fps.rs  game.rs  geometry.rs  geometry_old.rs  graphics.rs  gravity.rs  gui.rs  input.rs  main.rs  object.rs  old_hash_test.rs  player.rs  saveload.rs  shape_entity_builder.rs  spatial_hash.rs  systems.rs  test.rs  tests.rs  utils.rs  vector.rs
src/build_level/: face_test.rs  fun_level.rs  invert_test.rs  level_1.rs
src/collide/: bbox.rs  systems.rs
src/draw/: camera.rs  clipping.rs  draw_line_collection.rs  line_buffer.rs  systems.rs  texture.rs  visual_aids.rs
src/game/: game3d.rs  (+1 more)
(+77 files in other folders)
