[package]
name = "dim4"
version = "0.1.0"
authors = ["Alex Kuczala"]
edition = "2018"

[dependencies]
itertools = "0.8.0"
glium = "0.27.0"
winit_input_helper = "0.7.0"
#glium_text = "0.14.0"
#glium_text_rusttype = "0.3.2"
freetype = "0.4.1"
cgmath = "0.17.0"
colored = "1.8"
take_mut = "0.2.2"
map_in_place = "0.1.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
imgui = "0.5.0"
imgui-glium-renderer = "0.5.0"
imgui-winit-support = "0.5.0"

#[dev-dependencies]
#colored = "2"