[package]
name = "dim4"
version = "0.1.0"
authors = ["Alex Kuczala"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
glium = "0.32.1"
winit_input_helper = "0.13.0"
#glium_text = "0.14.0"
#glium_text_rusttype = "0.3.2"
freetype = "0.7.0"
cgmath = "0.18.0"
colored = "2.0.0"
take_mut = "0.2.2"
map_in_place = "0.1.0"
specs = { version = "0.18.0", features = ["specs-derive","shred-derive"] }
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
rand = "0.8.3"

[dev-dependencies]
serde_json = "1.0"